# laravel-docs-l10n

./: .gitignore  .gitmodules  LICENSE  README.md  build.php  build.py  build.sh  composer.json  crowdin.yml  generate_translations.sh  pyproject.toml  requirements.txt  update_template.py  update_template.sh  update_templates.php
.github/workflows/: build.yml  build.yml.disabled  update_template.yml
po/: docs.pot  zh_TW.po
po/zh_TW/: artisan.po  authentication.po  authorization.po  billing.po  blade.po  broadcasting.po  cache.po  cashier-paddle.po  collections.po  concurrency.po  configuration.po  console-tests.po  container.po  context.po  contracts.po  contributions.po  controllers.po  csrf.po  database-testing.po  database.po  deployment.po  documentation.po  dusk.po  eloquent-collections.po  eloquent-factories.po  eloquent-mutators.po  eloquent-relationships.po  eloquent-resources.po  eloquent.po  (+70 more)
templates/: artisan.pot  authentication.pot  authorization.pot  billing.pot  blade.pot  broadcasting.pot  cache.pot  cashier-paddle.pot  collections.pot  concurrency.pot  configuration.pot  console-tests.pot  container.pot  context.pot  contracts.pot  contributions.pot  controllers.pot  csrf.pot  database-testing.pot  database.pot  deployment.pot  documentation.pot  dusk.pot  eloquent-collections.pot  eloquent-factories.pot  eloquent-mutators.pot  eloquent-relationships.pot  eloquent-resources.pot  eloquent-serialization.pot  eloquent.pot  encryption.pot  envoy.pot  errors.pot  events.pot  facades.pot  filesystem.pot  folio.pot  fortify.pot  frontend.pot  hashing.pot  (+59 more)
(+334 files in other folders)
