[tool.poetry]
name = "laravel-docs-l10n"
version = "0.1.0"
description = ""
authors = ["Cornch <cornch@cornch.dev>"]
license = "MIT"
readme = "README.md"
packages = [{include = "laravel_docs_l10n"}]

[tool.poetry.dependencies]
python = "^3.10"
mdpo = "^1.0.0"
requests = "^2.28.1"
PyYAML = "^6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
